2010-12-01  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Remove unused method

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Make sure we have the right values in multifdsink's client
	stats to write the index

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Make use of the helper function _openFile properly

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Remove unused imports

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Add log category to the disker

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Don't start recording until we get the first tdt if we 
	are syncing on tdt's

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Add log category to the disker

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	Add a property to sync on tdt events

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Use a common pad probe for events and buffers

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml: